[package]
name = "erg-web-ide"
version = "0.1.0"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://erg-lang.org/web-ide/"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "=0.2.87"
erg_common = { git = "https://github.com/erg-lang/erg", features = ["no_std"] }
erg_compiler = { git = "https://github.com/erg-lang/erg", features = ["no_std"] }
rustpython_wasm = { git = "https://github.com/rustpython/rustpython", version = "0.3.0" }
once_cell = "1.16.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]
opt-level = 1
incremental = true
